--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
 
-<link rel="stylesheet" type="text/css" href="game.css">
+<link rel="stylesheet" type="text/css" href="style.css">
 
 <script src="game_login.js"></script>
 </head>
@@ -27,7 +27,7 @@
             
             <br>
       
-            <div style="background-color: white; border-radius: 20px; margin-left: 125px; margin-top: 25px; margin-bottom: 10px; width: 400px;" class="col-lg-4 col-sm-8 col-xs-11 Login_2">
+            <div style="background-color: white; border-radius: 20px; margin-left: 125px; margin-top: 50px; margin-bottom: 10px; width: 400px;" class="col-lg-4 col-sm-8 col-xs-11 Login_2">
               <h3>Player 2 login for the game</h3>
               <label>User Name :</label>
               <input class="input_1" type="text" placeholder="Player 2 Name" id="Player_2"> 
@@ -38,5 +38,6 @@
         </center>
     </div>
 
+    <script src="main.js"></script>
 </body>
 </html>
