--- a/game.html
+++ b/game.html
@@ -25,7 +25,7 @@
 
 
               <label>Send Your Word: <b style="color: aquamarine">Try putting word which has 5 or more alphabet </b> </label>
-              <input type="text" id="word" class="form-control" placeholder="Word">
+              <input type="text" id="word_question" class="form-control" placeholder="Word">
               <br> 
               <button onclick="send()" class="btn btn-success" style="width: 30%;">Send</button>
         </center>
